# dataspace-connector-on-aws

./: .gitignore  README.md  deploy-local.sh  deploy-pipeline.sh  deploy.sh
cdk/: .eslintrc.cjs  cdk.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
cdk/api/: data-plane-api.yaml  dsp-api.yaml  management-api.yaml  observability-api.yaml
cdk/config-templates/: deployment.yaml  pipeline.yaml
cdk/config-templates/connectors/: connector-example.yaml
cdk/lib/: app.ts  connector-stack.ts  dataspace-connector-stack.ts  deployment-stage.ts  pipeline-app.ts  pipeline-stack.ts  shared-infra-stack.ts
cdk/lib/config/: config-loader.ts  ddb-tables.ts  environments.ts  port-mappings.ts  schemas.ts
cdk/lib/constructs/: edc-api.ts  edc-control-plane.ts  edc-data-plane.ts  edc-ddb.ts  edc-fargate-service.ts  edc-nlb.ts  edc-secret-cleanup.ts  edc-token-key-pair.ts  infra-constructs.ts  service-constructs.ts
cdk/lib/util/: api-util.ts
edc/: build.gradle.kts  settings.gradle.kts
edc/control-plane/: Dockerfile  build.gradle.kts
edc/control-plane/src/main/resources/: log4j2.json  log4j2.xml
edc/data-plane/: Dockerfile  build.gradle.kts
edc/extensions/common/ddb/: build.gradle.kts
edc/extensions/control-plane/ddb/: build.gradle.kts
edc/extensions/data-plane/ddb/: build.gradle.kts
edc/gradle/: libs.versions.toml
kiro-power/: POWER.md  mcp.json
kiro-power/steering/: deploy-connector.md  prototype-data-exchange.md  prototype-use-case.md  validate-data-exchange.md
mcp/: README.md  pyproject.toml  server.py
(+48 files in other folders)
