[project]
name = "dataspace-connector-mcp"
version = "0.1.0"
description = "MCP server for Eclipse Dataspace Components (EDC) Management API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
]

[project.scripts]
dataspace-connector-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
